# SUSTAINA-OP2-Firmware

./: README.md  device_rules_set.sh
Audio-Board/firmware/: firmware.ino
Audio-Board/firmware/src/: config.h  sustaina_serial.cpp  sustaina_serial.h
Audio-Board/firmware/src/PmxCRC/: PmxCRC.h
Audio-Board/mp3/: rules.md  琴詠ニア_VOICEVOX.vvproj
Audio-Board/samples/: LICENSE  sample.py
Audio-Board/voice/: VOICEVOX.vvproj  rules.md  sdwrite.py  琴詠ニア_VOICEVOX.vvproj
Control-Switches-Board/: 17_DK-42688-P.rules
Control-Switches-Board/firmware/: firmware.ino
Control-Switches-Board/firmware/src/: config.h  sustaina_serial.cpp  sustaina_serial.h
Control-Switches-Board/firmware/src/BitOperations/: crc16.hpp
Control-Switches-Board/firmware/src/PmxCRC/: PmxCRC.cpp
Control-Switches-Board/new_led_sss/: new_led_sss.ino
DK-42688-P/: README.md  apply_patch.bash  example-algo.c  example-algo.cproj  example-algo.h  main.c  packing_struct.c
DK-42688-P/examples/: README.md  check_imu.py  requirements.txt
DK-42688-P/patches/: patch_Icm426xxDriver_HL.c  patch_Icm426xxDriver_HL.h  patch_example-algo.c  patch_example-algo.componentinfo.xml  patch_example-algo.cproj  patch_example-algo.h  patch_main.c  patch_system-interface.c  patch_system-interface.h
DK-42699-P/: 17_DK-42688-P.rules  README.md  example-algo.c  example-algo.componentinfo.xml  test.c
Power-Logging-Board/BiasMeasurement/: BiasMeasurement.ino
Power-Logging-Board/firmware/: firmware.ino
Power-Logging-Board/firmware/src/BitOperations/: crc16.cpp
Power-Logging-Board/firmware/src/INA226/: INA226.cpp  INA226.h
Power-Measurement-Recording-Module/firmware/: firmware.ino
StrainGauge-Sensing-Board/calibrate_sensor/: CMakeLists.txt  README.md  calibrate_main.cpp  calibrate_test.yaml  check_calibrate_result.cpp  communicate_foot_sensor.cpp  communicate_foot_sensor.h  foot_sensor_handler.cpp  foot_sensor_handler.h  foot_sensor_save_manager.cpp  foot_sensor_save_manager.h  least_squares_method.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  output.cpp
StrainGauge-Sensing-Board/calibrate_sensor/lib/: crc16.hpp
StrainGauge-Sensing-Board/calibrate_sensor/lib/PmxCRC/: PmxCRC.cpp  PmxCRC.h
StrainGauge-Sensing-Board/calibrate_sensor/lib/SerialPort/: CMakeLists.txt  README.md  RealSerialPort.cpp  RealSerialPort.h  SerialPort.h  SerialPortStub.h  SerialPortTest.cpp  return_packet_factory_example.h
StrainGauge-Sensing-Board/firmware/: firmware.ino
StrainGauge-Sensing-Board/firmware/src/: config.h  sustaina_serial.cpp  sustaina_serial.h
USB-to-Quad-RS-485-Conv-Module/: 13_FTDI_Serial.rules  18_FT4232H.rules  FT4232H_Conf_for_LeftLeg.xml  FT4232H_Conf_for_Modules.xml  FT4232H_Conf_for_RightLeg.xml  FT4232H_Conf_for_Sensor.xml  FT4232H_Default_Conf.xml  README.md  compile.sh  erase_eeprom.c  reset_port.c  write_setting_for20x_left.c  write_setting_for20x_right.c  write_setting_for_sensor_modules.c
USB-to-Quad-RS-485-Conv-Module/For-SUSTAINA-OP-2024/: README.md  x64_setting_lib.sh
ft4232h_eeprom/For-SUSTAINA-OP-2023/: compile.sh  jetson_setting_lib.sh
ft4232h_eeprom/For-SUSTAINA-OP-2024/: compile.sh  read_setting_from_eeprom.c  write_setting_into_eeprom.c
samples/: .gitignore  README.md  sample.py
